# calimero_x_icp_hackathon

./: .gitignore  dfx.json
basic_setup/context/chat/res/: chat.wasm
basic_setup/context/chat/src/: lib.rs
basic_setup/context/key_value_store/: Cargo.toml  build.sh
basic_setup/context/key_value_store/src/: lib.rs
basic_setup/context/key_value_store_context/: build.sh
basic_setup/context/miner/: Cargo.toml  build.sh
basic_setup/context/miner/res/: miner.wasm
basic_setup/context/miner/src/: lib.rs
basic_setup/context/mining_pool/res/: mining_pool.wasm
basic_setup/context/mining_pool/src/: lib.rs
exp/: README.md
exp/bil-html/docs/: index.html
exp/bil-html/frontend/: index.html  pnpm-lock.yaml  rename_jsx_to_tsx.sh
exp/bil-html/frontend/src/: App.tsx
exp/bil-html/frontend/src/components/dialogs/: Win98Dialog.tsx
exp/bil-html/frontend/src/components/features/: Mempool.tsx  WalletConnect.tsx
exp/bil-html/frontend/src/components/layout/: BackgroundCorner.tsx  Layout.tsx  (+5 more)
exp/bil-html/frontend/src/theme/: windows.ts
exp/bil-html/frontend/src/types/: windows.ts
exp/bil-html/frontend/src/utils/: styles.js
exp/hello-app/: calimero.md
exp/hello-app/calimero/: Cargo.toml
exp/hello-app/calimero/res/: hello_app.wasm
exp/hello-app/cli/: index.ts  package.json  pnpm-lock.yaml
exp/hello-app/src/: main.rs
exp/hello-app/vite/: .env.example  .gitignore  package.json  pnpm-lock.yaml
exp/hello-app/vite/src/: App.tsx
exp/hello-icp/: start.sh
src/logic/: Cargo.toml
src/logic/context_ai/: config.toml
src/logic/src/: lib.rs
src/miner_app/: Cargo.toml
src/miner_app/experiment/src/: main.rs
src/mining/: Cargo.toml
src/mining/doc/: 128bit_hash.md
src/mining/experiment/src/mining/: mod.rs
tests/: benchmark_tests.rs  block_tests.rs  core_tests.rs  edge_case_tests.rs  mod.rs
(+7 files in other folders)
